[package]
name = "wirecutter-esp32"
version = "0.1.0"
authors = ["ololoshka2871 <SweetTreasure@2ch.hk>"]
edition = "2021"
resolver = "2"

[profile.release]
lto = "fat"
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[profile.dev]
lto = false
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-8192"] }
embassy-sync = "0.5.0"
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
embassy-time-driver = { version = "0.1.0", optional = true }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-02 = { version = "0.2.7", package = "embedded-hal", features = [
    "unproven",
] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.1.0"
embedded-io-async = "0.6.1"
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
    "halt-cores",
] }
esp-hal = { version = "0.16.0", features = [
    "log",
    "esp32",
    "async",
    "embassy",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
    "embassy-time-timg0",
    "eh1",
] }
esp-println = { version = "0.9.1", features = ["log"] }
fugit = "0.3.7"
nb = "1.1.0"
static_cell = { version = "2.0.0", features = ["nightly"] }
heapless = "0.8.0"

# stepper motor driver
esp-flexystepper-rs = { path = "lib/ESP-FlexyStepper" }
